[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["Only-bottle <bmlee@nota.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
