[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["Only-bottle <bmlee@nota.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
djangorestframework = "^3.14.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.195.3"}
strawberry-graphql-django = "^0.14.0"
pyjwt = "^2.8.0"
django-environ = "^0.10.0"
django-cors-headers = "^4.2.0"
requests = "^2.31.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.7"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
